--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
 description-file = README.rst
-extra_files =
-    LICENSE
+
+# This includes the license file in the wheel.
+license_file = LICENSE
