--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-description-file = README.rst
+description-file = README.md
 
 # This includes the license file in the wheel.
 license_file = LICENSE
