--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
 commands =
     check-manifest --ignore tox.ini
     python setup.py check -m -s
+    python setup.py test
     flake8 .
 
 [flake8]
