--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 # Include docs
 include *.md
 include LICENSE
+recursive-include zigate/conf *.json
 prune .editorconfig
 prune *.rb
 prune build_upload.sh
