--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: python
 matrix:
   include:
     - python: 3.4
+      dist: jessie
+      env: TOXENV=py34
+      install:
+        - pip install -e ".[dev]"
+      script:
+        - tox
+    - python: 3.4
       env: TOXENV=py34
       install:
         - pip install -e ".[dev]"
