add graphviz to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,8 @@ matrix:
         - gem install mdl
         - cd ${TRAVIS_BUILD_DIR}
         - mdl -s markdownlint.rb *.md
+        
+addons:
+  apt:
+    packages:
+      - graphviz
