--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,7 @@ matrix:
         - cd ${TRAVIS_BUILD_DIR}
         - mdl -s markdownlint.rb *.md
         
+addons:
+  apt:
+    packages:
+      - python3-paho-mqtt
