--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,12 @@ matrix:
         - pip install -e ".[dev]"
       script:
         - tox
+    - python: 3.8
+      env: TOXENV=py38
+      install:
+        - pip install -e ".[dev]"
+      script:
+        - tox
     - language: markdown
       script:
         - gem install mdl
