--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
       script:
         - tox
     - python: 3.8
+      dist: xenial
       env: TOXENV=py38
       install:
         - pip install -e ".[dev]"
