--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
         - pip install -e ".[dev]"
       script:
         - tox
-    - python: 3.8
+    - python: 3.8-dev
       dist: xenial
       env: TOXENV=py38
       install:
