--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@
 include *.md
 include LICENSE
 recursive-include zigate *.json
+recursive-include zigate *.py
+recursive-include zigate *.tpl
 prune .editorconfig
 prune *.rb
 prune build_upload.sh
